fix text align home content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -314,7 +314,7 @@ img {
 }
 
 .home-data {
-  grid-column: 1/3;
+  grid-column: 2/3;
 }
 .home-title {
   font-size: var(--big-font-size);
@@ -954,6 +954,9 @@ img {
     grid-template-columns: 0.25fr 3fr;
   }
 
+  .home-data {
+    grid-column: 1/3;
+  }
   .home-blob {
     width: 180px;
   }
